--- a/digtale.html
+++ b/digtale.html
@@ -114,6 +114,7 @@
         <div class="container">
             <div class="row">
                 
+                <a href="otpbank.html" class="btn-pager btn-pager__left"></a>
                 <a href="6230.html" class="btn-pager btn-pager__right"></a>
 
                 <!-- home content -->
