--- a/digtale.html
+++ b/digtale.html
@@ -56,7 +56,7 @@
 <!-- Header -->
 <header id="home">
 
-    <!-- Background Image -->
+    <!-- Image -->
     <div class="bg-img-wrapper">
         <div class="bg-img" style="background-image: url('./img/work_digtale_background1.jpg');"></div>
         <div class="overlay"></div>
