--- a/otpbank.html
+++ b/otpbank.html
@@ -180,7 +180,7 @@
             <!-- about -->
             <div class="col-md-8 col-md-offset-2">
                 <div class="portfolio">
-                    <p>Customer/user experience strategic development (value proposition design, business and brand experience design, segmentation development, etc.), service design and process development.
+                    <p>Customer and user experience strategic development in retail and corporate segments: development of user segmentation, value proposition, brand experience, business and service design, and design thinking methodology and human-centric approach organizational integration. Areas of work: sustainabilty strategy and its online ecosystem development, group website ux design, micro and small enterprises value proposition design, lending ecosystem service design, campain planning process development, design thinking and ux approach integration into the group's subsidiaries.  
                         <br>OTP Bank / OTP Group, Budapest, Hungary | 2020-, <a href="https://www.otpbank.hu" target="_blank">otpbank.hu</a>
                     </p>
                 </div>
