--- a/6230.html
+++ b/6230.html
@@ -113,7 +113,7 @@
     <div class="home-wrapper">
         <div class="container">
             <div class="row">
-                <a href="digtale.html" class="btn-pager btn-pager__left"></a>
+                <a href="otpbank.html" class="btn-pager btn-pager__left"></a>
                 <a href="forelander.html" class="btn-pager btn-pager__right"></a>
 
                 <!-- home content -->
