--- a/otpbank.html
+++ b/otpbank.html
@@ -8,7 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>Digtale - businessdesign.mirajoo.com</title>
-    <meta name="description" content="OTP Bank Service Design">
+    <meta name="description" content="OTP Bank Business, Service, UX and Workshop Design">
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
@@ -119,7 +119,7 @@
                 <!-- home content -->
                 <div class="col-md-10 col-md-offset-1">
                     <div class="home-content">
-                        <h1 class="white-text">Service, UX & Workshop Design</h1>
+                        <h1 class="white-text">Business, Service, UX and Workshop Design</h1>
                         <p class="white-text">OTP Bank - OTP Group
                         </p>
                     </div>
