--- a/process.html
+++ b/process.html
@@ -127,6 +127,20 @@
             </div>
             <!-- /Section header -->
 
+            <!-- Work -->
+            <div class="col-md-4 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
+                    <div class="work-content">
+                        <span>Digtale - Digital Design Agency</span>
+                        <h3>
+                            <a href="digtale-process.html" >Business, Service, UX & Brand Design and Website Development</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->           
+            
              <!-- Work -->
             <div class="col-md-4 col-xs-6 work">
                 <div class="work-wrapper">
