--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     <div class="work-content">
                         <span>OTP Bank</span>
                         <h3>
-                            <a href="otpbank.html" >Service, UX & Workshop Design</a>
+                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
                         </h3>
                     </div>
                 </div>
