--- a/process.html
+++ b/process.html
@@ -132,14 +132,14 @@
                 <div class="work-wrapper">
                     <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
                     <div class="work-content">
-                        <span>Digtale - Digital Design Agency</span>
+                        <span>OTP Bank</span>
                         <h3>
-                            <a href="digtale-process.html" >Business, Service, UX & Brand Design and Website Development</a>
+                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
                         </h3>
                     </div>
                 </div>
             </div>
-            <!-- /Work -->           
+            <!-- /Work -->  
             
              <!-- Work -->
             <div class="col-md-4 col-xs-6 work">
