--- a/workshopdesign.html
+++ b/workshopdesign.html
@@ -127,6 +127,20 @@
             </div>
             <!-- /Section header -->
 
+                        <!-- Work -->
+            <div class="col-md-4 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
+                    <div class="work-content">
+                        <span>OTP Bank</span>
+                        <h3>
+                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->  
+            
             <!-- Work -->
             <div class="col-md-4 col-xs-6 work">
                 <div class="work-wrapper">
