--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <ul class="main-nav nav navbar-nav navbar-right">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li class="has-dropdown"><a href="#portfolio">My Works</a>
+                <li class="has-dropdown"><a href="#portfolio">My Work</a>
                     <ul class="dropdown">
                         <li><a href="research.html">Research</a></li>
                         <li><a href="serviceexperience.html">Service + Experience</a></li>
@@ -124,7 +124,7 @@
                         <p class="white-text">Research, analyze, reframe, rethink to arrive at innovative
                             humanity-centred solutions
                         </p>
-                        <a href="#portfolio" class="white-btn">My Works</a>
+                        <a href="#portfolio" class="white-btn">My Work</a>
                         <a href="#about" class="main-btn">Learn more</a>
                     </div>
                 </div>
@@ -377,7 +377,7 @@
 
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">My Works</h2>
+                <h2 class="title">My Work</h2>
             </div>
             <!-- /Section header -->
 
