--- a/strategybrand.html
+++ b/strategybrand.html
@@ -81,7 +81,7 @@
             <ul class="main-nav nav navbar-nav navbar-right">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">About</a></li>
-                <li class="has-dropdown"><a href="index.html#portfolio">My Works</a>
+                <li class="has-dropdown"><a href="index.html#portfolio">My Work</a>
                     <ul class="dropdown">
                         <li><a href="research.html">Research</a></li>
                         <li><a href="serviceexperience.html">Service + Experience</a></li>
