--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">What is Business Design?</h2>
+                <h2 class="title">What I Do as a Business Designer</h2>
             </div>
             <!-- /Section header -->
 
