--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
                 <!-- home content -->
                 <div class="col-md-10 col-md-offset-1">
                     <div class="home-content">
-                        <h1 class="white-text">Business Design</h1>
-                        <p class="white-text">Research, analyze, reframe, rethink to arrive at innovative
-                            humanity-centred solutions
+                        <h1 class="white-text">Strategic Design for Meaningful Change</h1>
+                        <p class="white-text">I design services, processes, and systems built on insight to drive meaningful impact — evolving organisations through the process.
                         </p>
                         <a href="#portfolio" class="white-btn">My Work</a>
                         <a href="#about" class="main-btn">Learn more</a>
@@ -162,16 +161,7 @@
             <!-- about -->
             <div class="col-md-8 col-md-offset-2">
                 <div class="about">
-                    <p>I am Mira Joo, a multidisciplinary business designer, service designer and music artist. I am keen on researching, analyzing and understanding
-                        experience, relationships and cause and effect
-                        phenomenons and design solutions. I’m passionate
-                        about solving wicked problems in business and
-                        society. My skillset is based on design thinking and
-                        music thinking, which I use to explore complexity,
-                        map patterns and relations and identify opportunities.
-                        I’m committed to creating meaningful and humanity-centered
-                        solutions with the collaboration of strategic business,
-                        service and experience design.  </p>
+                    <p>I’m Mira Joo — a service designer, UX designer, and CX strategist with a multidisciplinary mindset and a background in music as an artist. I am keen on researching, analysing and understanding experiences, relationships, and cause-and-effect phenomena and designing solutions. I’m passionate about solving wicked problems in business and society. My skillset is based on design thinking and music thinking, which I use to explore complexity, map patterns and relationships and identify opportunities. I’m committed to creating meaningful, human- and humanity-centred solutions through collaboration with strategic business, service, and experience design.  </p>
                 </div>
                 <img class="img-responsive" src="./img/discover_define-develop-deliver.png" alt="">
             </div>
