--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <!-- about -->
             <div class="col-md-8 col-md-offset-2">
                 <div class="about">
-                    <p>I’m Mira Joo — a service designer, UX designer, and CX strategist with a multidisciplinary mindset and a background in music as an artist. I am keen on researching, analysing and understanding experiences, relationships, and cause-and-effect phenomena and designing solutions. I’m passionate about solving wicked problems in business and society. My skillset is based on design thinking and music thinking, which I use to explore complexity, map patterns and relationships and identify opportunities. I’m committed to creating meaningful, human- and humanity-centred solutions through collaboration with strategic business, service, and experience design.  </p>
+                    <p>I’m Mira Joo — a Service & Business Designer, UX Designer, and CX Strategist with a multidisciplinary mindset and a background in music as an artist. I am keen on researching, analysing and understanding experiences, relationships, and cause-and-effect phenomena and designing solutions. I’m passionate about solving wicked problems in business and society. My skillset is based on design thinking and music thinking, which I use to explore complexity, map patterns and relationships and identify opportunities. I’m committed to creating meaningful, human- and humanity-centred solutions through collaboration with strategic business, service, and experience design.  </p>
                 </div>
                 <img class="img-responsive" src="./img/discover_define-develop-deliver.png" alt="">
             </div>
@@ -239,7 +239,7 @@
             
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">What I Do as a Business Designer</h2>
+                <h2 class="title">What I Do</h2>
             </div>
             <!-- /Section header -->
 
