--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">Design Areas I Work With and Connect</h2>
+                <h2 class="title">What I Do</h2>
             </div>
             <!-- /Section header -->
 
