--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="css/style.css?v=1.00"/>
+    <link type="text/css" rel="stylesheet" href="css/style.css?v=1.01"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -371,6 +371,57 @@
             </div>
             <!-- /Section header -->
 
+            <!-- Section header -->
+            <div class="section-header text-center">
+                <h3 class="title">Featured Projects</h3>
+            </div>
+            <!-- /Section header -->
+            <!-- Work -->
+            <div class="col-md-4 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
+                    <div class="work-content">
+                        <span>OTP Bank</span>
+                        <h3>
+                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->  
+            
+            <!-- Work -->
+            <div class="col-md-4 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/work_digtale.jpg" alt="">
+                    <div class="work-content">
+                        <span>Digtale - Digital Design Agency</span>
+                        <h3>
+                            <a href="digtale.html" >Business, Service, UX & Brand Design and Website Development</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->
+             <!-- Work -->
+            <div class="col-md-4 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
+                    <div class="work-content">
+                        <span>OTP Bank</span>
+                        <h3>
+                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->  
+            
+            <!-- Section header -->
+            <div class="section-sub-header text-center">
+                <h3 class="title">Early Projects</h3>
+            </div>
+            <!-- /Section header -->
             <!-- Work -->
             <div class="col-md-4 col-xs-6 work">
                 <div class="work-wrapper">
