--- a/index.html
+++ b/index.html
@@ -377,7 +377,20 @@
             </div>
             <!-- /Section header -->
             <!-- Work -->
-            <div class="col-md-4 col-xs-6 work">
+            <div class="col-md-12 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/porfolio_featured_otp_servicedesignframework.jpg" alt="">
+                    <div class="work-content">
+                        <span>OTP Bank</span>
+                        <h3>
+                            <a href="otpbank_servicedesignframework.html" >Project 1 – Building a Scalable Service Design Framework, Winner of the iF Design Award 2024</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->  
+                        <!-- Work -->
+            <div class="col-md-12 col-xs-6 work">
                 <div class="work-wrapper">
                     <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
                     <div class="work-content">
@@ -389,37 +402,24 @@
                 </div>
             </div>
             <!-- /Work -->  
+                        <!-- Work -->
+            <div class="col-md-12 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
+                    <div class="work-content">
+                        <span>OTP Bank</span>
+                        <h3>
+                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->   
             
-            <!-- Work -->
-            <div class="col-md-4 col-xs-6 work">
-                <div class="work-wrapper">
-                    <img class="img-responsive" src="./img/work_digtale.jpg" alt="">
-                    <div class="work-content">
-                        <span>Digtale - Digital Design Agency</span>
-                        <h3>
-                            <a href="digtale.html" >Business, Service, UX & Brand Design and Website Development</a>
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <!-- /Work -->
-             <!-- Work -->
-            <div class="col-md-4 col-xs-6 work">
-                <div class="work-wrapper">
-                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
-                    <div class="work-content">
-                        <span>OTP Bank</span>
-                        <h3>
-                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <!-- /Work -->  
             
             <!-- Section header -->
             <div class="section-sub-header text-center">
-                <h3 class="title">Early Projects</h3>
+                <h3 class="title">Early Work</h3>
             </div>
             <!-- /Section header -->
             <!-- Work -->
