--- a/index.html
+++ b/index.html
@@ -367,15 +367,11 @@
 
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">My Work</h2>
+                <h2 class="title">Featured Projects</h2>
             </div>
             <!-- /Section header -->
 
-            <!-- Section header -->
-            <div class="section-header text-center">
-                <h3 class="title">Featured Projects</h3>
-            </div>
-            <!-- /Section header -->
+
             <!-- Work -->
             <div class="col-md-12 col-xs-6 work">
                 <div class="work-wrapper">
@@ -383,8 +379,9 @@
                     <div class="work-content">
                         <span>OTP Bank</span>
                         <h3>
-                            <a href="otpbank_servicedesignframework.html" >Project 1 – Building a Scalable Service Design Framework, Winner of the iF Design Award 2024</a>
+                            <a href="otpbank_servicedesignframework.html" >Building a Scalable Service Design Framework</a>
                         </h3>
+                        <span>Winner of the iF Design Award 2024</span>
                     </div>
                 </div>
             </div>
