--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <div class="work-wrapper">
                     <img class="img-responsive" src="./img/porfolio_featured_otp_servicedesignframework.jpg" alt="">
                     <div class="work-content">
-                        <span>OTP Bank</span>
+                        <span>OTP Bank, 2021-22</span>
                         <h3>
                             <a href="otpbank_servicedesignframework.html" >Building a Scalable Service Design Framework</a>
                         </h3>
@@ -389,11 +389,12 @@
                         <!-- Work -->
             <div class="col-md-12 col-xs-6 work">
                 <div class="work-wrapper">
-                    <img class="img-responsive" src="./img/work_otpbank.jpg" alt="">
+                    <img class="img-responsive" src="./img/porfolio_featured_otp_zenga.jpg" alt="">
                     <div class="work-content">
-                        <span>OTP Bank</span>
+                        <span>OTP Bank / Zenga.hu, 2022</span>
                         <h3>
-                            <a href="otpbank.html" >Business, Service, UX & Workshop Design</a>
+                            <a href="otpbank_realestateserviceecosystem_zenga.html" >Real Estate Service Ecosystem: Zenga
+</a>
                         </h3>
                     </div>
                 </div>
