--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">Featured Projects</h2>
+                <h2 class="title">My Featured Projects</h2>
             </div>
             <!-- /Section header -->
 
@@ -417,7 +417,7 @@
             
             <!-- Section header -->
             <div class="section-sub-header text-center">
-                <h3 class="title">Early Work</h3>
+                <h2 class="title">My Early Work</h2>
             </div>
             <!-- /Section header -->
             <!-- Work -->
