--- a/index.html
+++ b/index.html
@@ -400,6 +400,22 @@
                 </div>
             </div>
             <!-- /Work -->  
+
+                        <!-- /Work -->  
+                        <!-- Work -->
+            <div class="col-md-12 col-xs-6 work">
+                <div class="work-wrapper">
+                    <img class="img-responsive" src="./img/porfolio_featured_otp_ESG.jpg" alt="">
+                    <div class="work-content">
+                        <span>OTP Bank, 2021-22</span>
+                        <h3>
+                            <a href="otpbank_ESG_Digital_Ecosystem.html" >ESG Digital Ecosystem & Integrated Strategy Development
+</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /Work -->  
                         <!-- Work -->
             <div class="col-md-12 col-xs-6 work">
                 <div class="work-wrapper">
