--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     <div class="work-content">
                         <span>OTP Bank / Zenga.hu, 2022</span>
                         <h3>
-                            <a href="otpbank_realestateserviceecosystem_zenga.html" >Service Blueprinting for a Real Estate Service Ecosystem: Zenga
+                            <a href="otpbank_realestateserviceecosystem_zenga.html" >Service Blueprinting for an Innovative Real Estate Service Ecosystem: Zenga
 </a>
                         </h3>
                     </div>
