--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             
             <!-- Section header -->
             <div class="section-sub-header text-center">
-                <h2 class="title">Work from Earlier Phases</h2>
+                <h2 class="title">My Earlier Design Explorations</h2>
             </div>
             <!-- /Section header -->
             <!-- Work -->
