--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">My Featured Projects</h2>
+                <h2 class="title">Featured Projects</h2>
             </div>
             <!-- /Section header -->
 
@@ -420,7 +420,7 @@
             
             <!-- Section header -->
             <div class="section-sub-header text-center">
-                <h2 class="title">My Earlier Design Explorations</h2>
+                <h2 class="title">Other Design Explorations</h2>
             </div>
             <!-- /Section header -->
             <!-- Work -->
