--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             
             <!-- Section header -->
             <div class="section-header text-center">
-                <h2 class="title">What I Do and Integrate</h2>
+                <h2 class="title">Holistic Areas of My Design Practice</h2>
             </div>
             <!-- /Section header -->
 
@@ -247,7 +247,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service">
                     <i class="fa fa-flask"></i>
-                    <h3>User + Experience + Industry Research </h3>
+                    <h3>User + Experience + Market Research </h3>
                     <p></p>
                 </div>
             </div>
@@ -257,7 +257,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service">
                     <i class="fa fa-diamond"></i>
-                    <h3>Service + Experience Design</h3>
+                    <h3>Service + Experience + Product Design</h3>
                     <p></p>
                 </div>
             </div>
@@ -278,7 +278,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service">
                     <i class="fa fa-rocket"></i>
-                    <h3>Business Model Innovation</h3>
+                    <h3>Business Model + Value Proposition Innovation</h3>
                     <p></p>
                 </div>
             </div>
@@ -298,7 +298,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service">
                     <i class="fa fa-pencil"></i>
-                    <h3>Design Thinking Integration</h3>
+                    <h3>Design Thinking Integration + Workshop Facilitation</h3>
                     <p></p>
                 </div>
             </div>
@@ -368,6 +368,7 @@
             <!-- Section header -->
             <div class="section-header text-center">
                 <h2 class="title">My Featured Projects</h2>
+                <h3 class="balanced">Here you’ll find a curated selection of projects where I could fully apply my skills as a service and business designer — shaping ecosystems, aligning diverse stakeholders, and delivering meaningful user experiences. These are the works I’m most proud of, not only for their impact, but for the collaboration and learning they enabled.</h3>
             </div>
             <!-- /Section header -->
 
@@ -377,7 +378,7 @@
                 <div class="work-wrapper">
                     <img class="img-responsive" src="./img/porfolio_featured_otp_servicedesignframework.jpg" alt="">
                     <div class="work-content">
-                        <span>OTP Bank, 2021-22</span>
+                        <span>OTP Bank, 2022</span>
                         <h3>
                             <a href="otpbank_servicedesignframework.html" >Building a Scalable Service Design Framework</a>
                         </h3>
@@ -420,7 +421,8 @@
             
             <!-- Section header -->
             <div class="section-sub-header text-center">
-                <h2 class="title">My Other Design Explorations</h2>
+                <h2 class="title">Projects from My Design Journey</h2>
+                <h3 class="balanced">A selection of early and experimental projects that shaped my thinking as a designer — where I explored tools, methods, and ideas that now form the foundation of my practice.</h3>
             </div>
             <!-- /Section header -->
 
