--- a/otpbank_realestateserviceecosystem_zenga.html
+++ b/otpbank_realestateserviceecosystem_zenga.html
@@ -483,15 +483,18 @@ Performance attribution to mortgage uptake or service experience impact remains 
 
 
 
-
+<!-- Section header -->
+            <div class="section-header text-center">
+                <h3 class="title">Team & Collaboration</h3>
+            </div>
+<!-- /Section header -->
                         <!-- about -->
             <div class="col-md-8 col-md-offset-2">
                 <div class="portfolio">
                     <p>
                     </p>
                     
-                    <p>Team & Collaboration:
-                    </p>
+
                     <p>Core team: Cross-functional OTP representatives (marketing, product, Research, SD, IT, sales, legal, compliance, finance,  support)
 
                     </p>
