--- a/otpbank_servicedesignframework.html
+++ b/otpbank_servicedesignframework.html
@@ -495,15 +495,15 @@ This wasn’t just a methodology — it was a cultural bridge. It gave people a 
 
 
 
-
+<!-- Section header -->
+            <div class="section-header text-center">
+                <h3 class="title">Team & Collaboration</h3>
+            </div>
+<!-- /Section header -->
                         <!-- about -->
             <div class="col-md-8 col-md-offset-2">
                 <div class="portfolio">
-                    <p>
-                    </p>
                     
-                    <p>Team & Collaboration:
-                    </p>
                     <p>Core: Internal Service Design Group (CoE), Exalt Interactive (external partner), Research Group, representatives from the Customer Experience (CX) Stream, and the Digital Product Division
                     </p>
                     <p>Extended Team: Cross-functional representatives from Marketing, Product Development, Digital Banking, Retail and Corporate Banking, and Finance — including both senior and junior stakeholders, managers, and decision-makers from multiple units across OTP Group
