--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service">
                     <i class="fa fa-diamond"></i>
-                    <h3>Service + Experience + Product Design</h3>
+                    <h3>Service + Experience Design</h3>
                     <p></p>
                 </div>
             </div>
