--- a/otpbank_realestateserviceecosystem_zenga.html
+++ b/otpbank_realestateserviceecosystem_zenga.html
@@ -450,6 +450,7 @@ Performance attribution to mortgage uptake or service experience impact remains 
                     <img class="img-responsive" src="./img/zenga_desktop.jpg" alt="">
                     <img class="img-responsive" src="./img/zenga_start.jpg" alt="">
                     <img class="img-responsive" src="./img/zenga_web.png" alt="">
+                    <img class="img-responsive" src="./img/OTPBank_Workshop.jpg" alt="">
 
                                        
                 </div>
