--- a/otpbank_ESG_Digital_Ecosystem.html
+++ b/otpbank_ESG_Digital_Ecosystem.html
@@ -595,7 +595,7 @@
                     <img class="img-responsive" src="./img/OTPBank_ESG1.png" alt="">
                     <img class="img-responsive" src="./img/ESG_value_flow.jpg" alt="">
                           <img class="img-responsive" src="./img/OTP_Integrated.jpeg" alt="">
-
+<img class="img-responsive" src="./img/OTPBank_Workshop.jpg" alt="">
                                        
                 </div>
             </div>
